Working on DuckBook

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
+    "react-scroll-up-button": "^1.6.4",
     "react-spinkit": "^3.0.0",
     "redux": "^4.0.5",
     "redux-auth-wrapper": "^2.1.0",
